--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.1.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "flag-icons": "^6.10.0",
