--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.1.1",
+    "disqus-react": "^1.1.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "flag-icons": "^6.10.0",
@@ -35,7 +35,7 @@
     "react-dom": "18.2.0",
     "react-portable-text": "^0.6.0",
     "react-refractor": "^2.1.7",
-    "sanity": "^3.15.0",
+    "sanity": "^3.19.2",
     "sanity-plugin-iframe-pane": "^2.5.4",
     "sanity-plugin-media": "^2.2.2",
     "sanity-plugin-vercel-deploy": "^3.3.4",
